@@ -9,8 +9,8 @@ There are many settings that can be changed in this dialog box. For example,
 <li>To change the tab width and other editor settings, go to <b>Editor</b>.
 <li>To dock plugin windows into the view, go to <b>Docking</b>.
 <li>To change other plugin settings, go to <b>Plugin Options</b>.
-<li>If you're behind an HTTP proxy and would like to use the plugin
-manager to install plugins, go to <b>HTTP Proxy</b>.
+<li>If you're behind an HTTP or SOCKS proxy and would like to use the plugin
+manager to install plugins, go to <b>Proxy Servers</b>.
 </ul>
 
 </body>
